styling.css
/* FREDRIKS CSS FILE */


/* Navigation bar with logo */
.nav-bar {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100px;
    flex-direction: row;
}

.nav-bar img {
    padding-right: 900px;
    margin: 0;
    width: 250px;
}

.nav-bar a {
    font-size: 34px;
    font-weight: bold;
    padding-inline: 40px;
    color: white;
}

.nav-bar a:hover {
    color: rgb(73, 100, 122);
}

/* Info Section */
hr {
    margin-block: 128px;
    color: white;
    opacity: 65%;
    width: 90%;
}

.info-section{
    margin: auto;
    margin-block: 128px;
    max-width: 85%;
    display: flex;
    flex-direction: row;
}

.info-section {
    margin: auto;
    margin-top: 128px;
    max-width: 85%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.info-text {
    height: 300px;
    padding-inline: 200px;
}

.info-text h1 {
    font-size: 64px;
}
.info-text h2 {
    font-size: 24px;
}

.info-section div img {
    margin: 0;
    width: 500px;
}

